# Central-Cortex

./: .env  .replit  README.md  afk.json  debate.json  main.py  pyproject.toml  template.py  users.json  webserver.py
categories/: archivedCode.txt  compsci.py  debate.py  english.py  french.py  general.py  help.py  helper.py  math.py  message_events.py  science.py  utility.py  vc_queues.py  work.py
commands/: help.py
